Project

General

Profile

Actions

Bug #15352

closed

TestJournalEntries.AioWrite: failed assert(m_watch_in_progress)

Added by Josh Durgin about 8 years ago. Updated about 8 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/teuthology-2016-03-30_12:01:01-rbd-jewel-distro-basic-smithi/97305/teuthology.log

Happened when running under helgrind on smithi with RBD_FEATURES=125:

2016-03-31T15:01:44.547 INFO:tasks.workunit.client.0.smithi045.stdout:[ RUN      ] TestJournalEntries.AioWrite
2016-03-31T15:01:57.220 INFO:tasks.workunit.client.0.smithi045.stderr:journal/ObjectPlayer.cc: In function 'void journal::ObjectPlayer::handle_watch_fetched(int)' thread 16f58700 time 2016-03-31 22:01:56.550428
2016-03-31T15:01:57.221 INFO:tasks.workunit.client.0.smithi045.stderr:journal/ObjectPlayer.cc: 208: FAILED assert(m_watch_in_progress)
2016-03-31T15:01:57.231 INFO:tasks.workunit.client.0.smithi045.stderr: ceph version 10.1.0-265-g88a183b (88a183bd85ed1cab287041d0fa40630e835d4ba0)
2016-03-31T15:01:57.232 INFO:tasks.workunit.client.0.smithi045.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x8b) [0x69175b]
2016-03-31T15:01:57.232 INFO:tasks.workunit.client.0.smithi045.stderr: 2: (journal::ObjectPlayer::handle_watch_fetched(int)+0x2ad) [0x5a9fcd]
2016-03-31T15:01:57.232 INFO:tasks.workunit.client.0.smithi045.stderr: 3: (Context::complete(int)+0x9) [0x44a229]
2016-03-31T15:01:57.232 INFO:tasks.workunit.client.0.smithi045.stderr: 4: (Context::complete(int)+0x9) [0x44a229]
2016-03-31T15:01:57.233 INFO:tasks.workunit.client.0.smithi045.stderr: 5: (librados::C_AioComplete::finish(int)+0x1d) [0x5fc29d]
2016-03-31T15:01:57.233 INFO:tasks.workunit.client.0.smithi045.stderr: 6: (Context::complete(int)+0x9) [0x44a229]
2016-03-31T15:01:57.233 INFO:tasks.workunit.client.0.smithi045.stderr: 7: (Finisher::finisher_thread_entry()+0x206) [0x690956]
2016-03-31T15:01:57.234 INFO:tasks.workunit.client.0.smithi045.stderr: 8: (()+0x9e27) [0xa986e27]
2016-03-31T15:01:57.234 INFO:tasks.workunit.client.0.smithi045.stderr: 9: (()+0x8182) [0xab9b182]
2016-03-31T15:01:57.234 INFO:tasks.workunit.client.0.smithi045.stderr: 10: (clone()+0x6d) [0xc88447d]
Actions #1

Updated by Jason Dillaman about 8 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman about 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Jason Dillaman about 8 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF