journal: possible race condition during live replay

When two objects are being actively watched, it was possible for
the watch context to complete before the second watch was
associated.

Fixes: http://tracker.ceph.com/issues/15352
Signed-off-by: Jason Dillaman <dillaman@redhat.com>